preliminary 26.2 port
Waiting for 26.2.1 due to [MC-308809](https://bugs.mojang.com/browse/MC/issues/MC-308809)